# UH2S

./: .dockerignore  .gitignore  ADDING_SOURCES.md  API.md  ARCHITECTURE.md  DOCKER.md  Dockerfile  HARVESTER_DSL.md  MCP.md  PARSING.md  README.md  ROADMAP.md  SECURITY_SCRUB.md  SETTINGS_PLAN.md  SHOW_MATPLOTLIB.md  base64_json_object_creator.ipynb  docker-compose.yml  engine.py  env.example  front.py  mcp_server.py  mcp_smoke.py  pyproject.toml  requirements.lock.txt  requirements.txt  secrets-replacements.txt.example
.github/workflows/: ci.yml
app/: agent_actions.py  ai_pipeline.py  analyzer.py  crptgrphy.py  db.py  downloads.py  engine.py  i18n.py  interface.py  llm.py  logging.py  login.py  notify.py  parse_errors.py  reference.py  scheduler.py  tabular.py  tree_builder.py  validation.py  version.py
app/sources/: dns.py  duckdb.py  elastic.py  elastic_requests.py  gitlab.py  grafana.py  iris.py  jira_sm.py  llama.py  llm_source.py  manticoresearch.py  mssql.py  mysql.py  netbox.py  ollama.py  opensearch.py  pandas.py  postgresql.py  requests.py  sqlite3.py  teleport.py  thehive.py  universal_harvester.py  youtrack.py
app/sources/additional/: elastic2python.py  retry.py
tests/: test_ai_pipeline.py  test_analyzer.py  test_command_parser.py  test_dedup_rows.py  test_downloads.py  test_elastic_auth.py  test_elastic_data_taxi.py  test_jira_sm.py  test_llm_source.py  test_object_outputs.py  test_reference.py  test_save_download.py  test_scheduler.py  test_tabular.py  test_thehive.py  test_tree_builder.py
tools/: make_favicon.py
